<?xml version="1.0" encoding="utf-8"?>

<!--
 * Copyright (c) 2017-present, Team Bucket Contributors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
 * the License for the specific language governing permissions and limitations under the License.
-->

<resources>
    <string name="app_name">Team Bucket</string>
    <string name="bitbucket_auth_header">Authenticate with BitBucket</string>
    <string name="hint_url">BitBucket URL</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>

    <string name="home_tab_title">Home</string>
    <string name="reviewers_tab_title">Reviewers</string>
    <string name="statistics_tab_title">Statistics</string>
    <string name="who_to_choose">Who to choose?</string>

    <string name="projects_choose_header">Select projects</string>
    <string name="repositories_choose_header">Select repositories</string>
    <string name="toast_no_network">Cannot connect to the server</string>
    <string name="toast_credentials_expired">Username or password are invalid.</string>
    <string name="toast_server_error">Could not obtain correct data from the server. Please check the configuration.</string>
    <string name="toast_cannot_reach_server">Could not reach the server. Please check the URL.</string>
    <string name="toast_server_or_credentials_invalid">Server unreachable or credentials invalid. Try again.</string>
    <string name="toast_server_url_invalid">BitBucket URL is not valid.</string>
    <string name="reviewing_count">Reviewing: %d</string>
    <string name="lead_reviewing_count">(Lead) Reviewing: %d</string>
    <string name="reviewer_avatar_content_desc">Reviewer\'s avatar</string>
    <string name="expand_reviewer_info_desc">Expand reviewer information</string>
    <string name="suggested_reviewers_header">Suggested Reviewers</string>
    <string name="could_not_retrieve_the_data">"Could not retrieve the data :-(</string>
    <string name="no_data_step1">1. Make sure you are connected to the internet</string>
    <string name="no_data_step2">2. Check if the server requires VPN access</string>
    <string name="no_data_step3">3. Setup the app by clicking on</string>
    <string name="no_data_step4">4. Pull down to refresh</string>
    <string name="coming_soon">Coming soon! :-)</string>
    <string name="pull_requests_assigned_to_you">%1$d Pull Requests to review</string>
    <string name="no_pull_requests">You have no Pull Requests assigned</string>
    <string name="show_info">Show info</string>

    <string name="about">About</string>
    <string-array name="copyright">
        <item>Team Bucket\nCopyright © 2017-present, Team Bucket Contributors.\n\nLicensed under the Apache License,\nVersion
            2.0.</item>
        <item><a href="https://github.com/luks91/Team-Bucket">Source code available on GitHub.</a></item>
        <item><b>Libraries used in the project:</b></item>
        <item><a href="https://developer.android.com/topic/libraries/support-library/index.html">Android Support
            Library</a>\nApache 2.0 License</item>
        <item><a href="https://kotlinlang.org">Kotlin</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/JakeWharton/RxRelay">RxRelay2</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/facebook/conceal">Conceal, Facebook</a>\nBSD License</item>
        <item><a href="https://github.com/afollestad/material-dialogs">Material-Dialogs</a>\nThe MIT License (MIT)</item>
        <item><a href="https://github.com/sockeqwe/mosby">Mosby</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/ReactiveX/RxJava">RxJava 2.0</a>\nApache 2.0 License</item>
        <item><a href="http://square.github.io/picasso/">Picasso</a>\nApache 2.0 License</item>
        <item><a href="https://commons.apache.org/proper/commons-lang/">Apache Common-Lang</a>\nApache 2.0 License</item>
        <item><a href="http://square.github.io/retrofit/">Retrofit</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/google/dagger">Dagger</a>\nApache 2.0 License</item>
        <item><a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>\nApache 2.0 License</item>
    </string-array>
    <string-array name="copyright_urls">
        <item/>
        <item>https://github.com/luks91/Team-Bucket</item>
        <item/>
        <item>https://developer.android.com/topic/libraries/support-library/index.html</item>
        <item>https://kotlinlang.org</item>
        <item>https://github.com/JakeWharton/RxRelay">RxRelay2</item>
        <item>https://github.com/facebook/conceal</item>
        <item>https://github.com/afollestad/material-dialogs</item>
        <item>https://github.com/sockeqwe/mosby</item>
        <item>https://github.com/ReactiveX/RxAndroid</item>
        <item>https://github.com/ReactiveX/RxJava</item>
        <item>http://square.github.io/picasso/</item>
        <item>https://commons.apache.org/proper/commons-lang/</item>
        <item>http://square.github.io/retrofit/</item>
        <item>https://github.com/google/dagger</item>
        <item>https://github.com/PhilJay/MPAndroidChart</item>
    </string-array>
    <string-array name="magic_urls">
        <item><item>https://youtu.be/jI-kpVh6e1U</item></item>
    </string-array>
</resources>
