<?xml version="1.0" encoding="utf-8"?>

<!--
 * Copyright (c) 2017-present, PR Paradise Contributors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
 * the License for the specific language governing permissions and limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingStart="20dp"
              android:paddingEnd="20dp">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textUri"
              android:hint="@string/hint_url"
              android:text="https://bitbucket.mot-solutions.com"
              android:ems="10"
              android:id="@+id/bitbucketUrl"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:hint="@string/hint_username"
              android:ems="10"
              android:id="@+id/username"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_password"
              android:inputType="textPassword"
              android:ems="10"
              android:id="@+id/password"/>
</LinearLayout>